app_layout: prevent undesired margin collapsing

--- a/app/modules/general/scss/_general_settings.scss
+++ b/app/modules/general/scss/_general_settings.scss
@@ -101,6 +101,7 @@ body{
   // Display only on .standalone layouts
   display: none;
   text-align: center;
+  margin-top: 0;
   margin-bottom: 0.5em;
   font-weight: normal;
   color: $grey;
